[gd_scene load_steps=23 format=2]

[ext_resource path="res://Combat.gd" type="Script" id=1]
[ext_resource path="res://icons/blank.png" type="Texture" id=2]
[ext_resource path="res://AC.gd" type="Script" id=3]
[ext_resource path="res://icons/skjold.png" type="Texture" id=4]
[ext_resource path="res://Font/Combat.tres" type="DynamicFont" id=5]
[ext_resource path="res://HP.gd" type="Script" id=6]
[ext_resource path="res://icons/Heart_damaged.png" type="Texture" id=7]
[ext_resource path="res://icons/Heart_progress.png" type="Texture" id=8]
[ext_resource path="res://icons/Scar.png" type="Texture" id=9]
[ext_resource path="res://icons/bandaid.png" type="Texture" id=10]
[ext_resource path="res://INIT.gd" type="Script" id=11]
[ext_resource path="res://icons/shoe.png" type="Texture" id=12]
[ext_resource path="res://PER.gd" type="Script" id=13]
[ext_resource path="res://icons/eye.png" type="Texture" id=14]
[ext_resource path="res://Weapon.gd" type="Script" id=15]
[ext_resource path="res://icons/sword.png" type="Texture" id=16]
[ext_resource path="res://Ammo.gd" type="Script" id=17]
[ext_resource path="res://Turns.gd" type="Script" id=18]
[ext_resource path="res://Conditions.gd" type="Script" id=19]
[ext_resource path="res://InputPopup.gd" type="Script" id=20]
[ext_resource path="res://Font/Inprimis55regular_v126free.ttf" type="DynamicFontData" id=21]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 21 )

[node name="Root" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Node2D" parent="."]

[node name="blank" type="Sprite" parent="Background"]
modulate = Color( 0.137255, 0.137255, 0.137255, 1 )
position = Vector2( 512, 300 )
texture = ExtResource( 2 )

[node name="AC" type="Node2D" parent="."]
editor/display_folded = true
script = ExtResource( 3 )

[node name="skjold" type="Sprite" parent="AC"]
modulate = Color( 0.541176, 0.541176, 0.541176, 1 )
position = Vector2( 110.387, 104.62 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )

[node name="TextureButton" type="TextureButton" parent="AC"]
margin_left = 24.5797
margin_top = 26.4705
margin_right = 64.5797
margin_bottom = 66.4705
rect_scale = Vector2( 4.3361, 3.8699 )

[node name="Label" type="Label" parent="AC"]
margin_left = 64.4184
margin_top = 56.2804
margin_right = 370.418
margin_bottom = 356.28
rect_scale = Vector2( 0.635, 0.69 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
text = "10"

[node name="HP" type="Node2D" parent="." groups=[
"Persist",
]]
script = ExtResource( 6 )

[node name="TextureProgress" type="TextureProgress" parent="HP"]
margin_left = 415.087
margin_top = -13.9379
margin_right = 1439.09
margin_bottom = 1010.06
rect_scale = Vector2( 0.23, 0.23 )
max_value = 35.0
value = 35.0
texture_over = ExtResource( 7 )
texture_progress = ExtResource( 8 )
fill_mode = 3
tint_over = Color( 0.541176, 0.541176, 0.541176, 1 )
tint_progress = Color( 0.854902, 0, 0, 1 )

[node name="Label" type="Label" parent="HP/TextureProgress"]
margin_left = 490.0
margin_top = 335.0
margin_right = 557.0
margin_bottom = 535.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
text = "/"

[node name="max" type="Label" parent="HP/TextureProgress"]
margin_left = 559.004
margin_top = 335.0
margin_right = 865.004
margin_bottom = 586.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
text = "35"
autowrap = true

[node name="current" type="Label" parent="HP/TextureProgress"]
anchor_right = 1.0
margin_left = 180.0
margin_top = 335.0
margin_right = -640.003
margin_bottom = 738.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
text = "35"
align = 2
autowrap = true

[node name="max_hp_button" type="TextureButton" parent="HP/TextureProgress"]
margin_left = 73.9131
margin_top = 169.565
margin_right = 113.913
margin_bottom = 209.565
rect_scale = Vector2( 21.8796, 10.5711 )

[node name="Scar" type="Sprite" parent="HP"]
editor/display_folded = true
modulate = Color( 0.541176, 0.541176, 0.541176, 1 )
position = Vector2( 427.7, 189 )
texture = ExtResource( 9 )

[node name="scar_button" type="TextureButton" parent="HP/Scar"]
margin_left = -50.0
margin_top = -23.0
margin_right = -10.0
margin_bottom = 17.0
rect_scale = Vector2( 2.41009, 1.06742 )

[node name="bandaid" type="Sprite" parent="HP"]
editor/display_folded = true
modulate = Color( 0.541176, 0.541176, 0.541176, 1 )
position = Vector2( 638.6, 186.15 )
texture = ExtResource( 10 )

[node name="bandaid_button" type="TextureButton" parent="HP/bandaid"]
margin_left = -49.0
margin_top = -47.0
margin_right = -9.0
margin_bottom = -7.0
rect_scale = Vector2( 2.4442, 2.30813 )

[node name="Tween" type="Tween" parent="HP"]

[node name="INIT" type="Node2D" parent="."]
editor/display_folded = true
script = ExtResource( 11 )

[node name="shoe" type="Sprite" parent="INIT"]
modulate = Color( 0.541176, 0.541176, 0.541176, 1 )
position = Vector2( 940.325, 64.8901 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 12 )

[node name="TextureButton" type="TextureButton" parent="INIT"]
margin_left = 866.635
margin_top = 2.44353
margin_right = 906.635
margin_bottom = 42.4435
rect_scale = Vector2( 3.89987, 2.98907 )

[node name="Label" type="Label" parent="INIT"]
margin_left = 922.773
margin_top = 44.9784
margin_right = 1050.77
margin_bottom = 295.979
rect_scale = Vector2( 0.456453, 0.445124 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
text = "3"

[node name="PER" type="Node2D" parent="."]
editor/display_folded = true
script = ExtResource( 13 )

[node name="eye" type="Sprite" parent="PER"]
modulate = Color( 0.541176, 0.541176, 0.541176, 1 )
position = Vector2( 939.98, 175.205 )
scale = Vector2( 0.28, 0.28 )
texture = ExtResource( 14 )

[node name="TextureButton" type="TextureButton" parent="PER"]
margin_left = 867.302
margin_top = 132.668
margin_right = 907.302
margin_bottom = 172.668
rect_scale = Vector2( 3.62145, 2.12162 )

[node name="Label" type="Label" parent="PER"]
margin_left = 915.417
margin_top = 153.436
margin_right = 1171.42
margin_bottom = 404.435
rect_scale = Vector2( 0.363372, 0.401115 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
text = "11"

[node name="Weapon" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( -10.0001, -3.00002 )
script = ExtResource( 15 )

[node name="sword" type="Sprite" parent="Weapon"]
modulate = Color( 0.541176, 0.541176, 0.541176, 1 )
position = Vector2( 241.119, 389.456 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 16 )

[node name="weapon_name" type="Label" parent="Weapon"]
margin_left = 182.451
margin_top = 330.692
margin_right = 1524.45
margin_bottom = 581.692
rect_scale = Vector2( 0.295, 0.299 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
text = "Greatsword"

[node name="attack" type="Label" parent="Weapon"]
margin_left = 30.9514
margin_top = 360.403
margin_right = 132.951
margin_bottom = 763.403
rect_scale = Vector2( 0.459, 0.453 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
text = "5
"

[node name="damage" type="Label" parent="Weapon"]
margin_left = 239.466
margin_top = 372.232
margin_right = 556.466
margin_bottom = 572.232
rect_scale = Vector2( 0.334, 0.294 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
text = "2d6"

[node name="weapon_button" type="TextureButton" parent="Weapon"]
margin_left = 183.209
margin_top = 326.707
margin_right = 223.209
margin_bottom = 366.707
rect_scale = Vector2( 5.95676, 1.08991 )

[node name="attack_button" type="TextureButton" parent="Weapon"]
margin_left = 22.5627
margin_top = 359.197
margin_right = 62.5627
margin_bottom = 399.197
rect_scale = Vector2( 1.23046, 1.43489 )

[node name="damage_button" type="TextureButton" parent="Weapon"]
margin_left = 217.504
margin_top = 370.93
margin_right = 257.504
margin_bottom = 410.93
rect_scale = Vector2( 3.53176, 1.09825 )

[node name="Ammo" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 9.00006, 87.8427 )
scale = Vector2( 0.628066, 0.678121 )
script = ExtResource( 17 )

[node name="text" type="Label" parent="Ammo"]
margin_left = 8.00003
margin_top = 519.003
margin_right = 579.0
margin_bottom = 770.003
rect_scale = Vector2( 0.515, 0.691 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
text = "Ammo:"

[node name="ammo" type="Label" parent="Ammo"]
margin_left = 225.809
margin_top = 527.798
margin_right = 353.809
margin_bottom = 778.798
rect_scale = Vector2( 0.685, 0.63 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
text = "1"

[node name="TextureButton" type="TextureButton" parent="Ammo"]
margin_left = 7.1324
margin_top = 523.289
margin_right = 47.1324
margin_bottom = 563.289
rect_scale = Vector2( 5.25581, 2.03921 )

[node name="Turns" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 421.271, 8.45248 )
scale = Vector2( 0.910115, 0.994949 )
script = ExtResource( 18 )

[node name="text" type="Label" parent="Turns"]
margin_left = 8.00003
margin_top = 519.003
margin_right = 579.0
margin_bottom = 770.003
rect_scale = Vector2( 0.652, 0.684 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
text = "Turn:"

[node name="turns" type="Label" parent="Turns"]
margin_left = 218.001
margin_top = 520.003
margin_right = 346.001
margin_bottom = 771.003
rect_scale = Vector2( 0.658, 0.666 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
text = "1"

[node name="TextureButton" type="TextureButton" parent="Turns"]
margin_top = 521.648
margin_right = 40.0
margin_bottom = 561.648
rect_scale = Vector2( 5.35952, 1.91351 )

[node name="Conditions" type="Node2D" parent="."]
editor/display_folded = true
script = ExtResource( 19 )

[node name="text" type="Label" parent="Conditions"]
margin_left = 693.004
margin_top = 297.002
margin_right = 1845.0
margin_bottom = 448.002
rect_scale = Vector2( 0.32, 0.36 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
text = "Buffs/Conditions:"

[node name="Turns1" type="Label" parent="Conditions"]
margin_left = 955.0
margin_top = 350.0
margin_right = 1109.0
margin_bottom = 501.0
rect_scale = Vector2( 0.426297, 0.396473 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
text = "0"

[node name="Desc1" type="Label" parent="Conditions"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 880.0
margin_top = 350.0
margin_right = 1034.0
margin_bottom = 501.0
grow_horizontal = 2
rect_scale = Vector2( 0.426297, 0.396473 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
align = 2
valign = 1
autowrap = true

[node name="turns_btn1" type="TextureButton" parent="Conditions"]
margin_left = 949.591
margin_top = 347.925
margin_right = 989.591
margin_bottom = 387.925
rect_scale = Vector2( 1.11237, 1.40025 )

[node name="desc_btn1" type="TextureButton" parent="Conditions"]
margin_left = 693.633
margin_top = 346.817
margin_right = 733.633
margin_bottom = 386.817
rect_scale = Vector2( 6.36044, 1.40025 )

[node name="Turns2" type="Label" parent="Conditions"]
margin_left = 955.0
margin_top = 410.0
margin_right = 1109.0
margin_bottom = 561.0
rect_scale = Vector2( 0.426297, 0.396473 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
text = "0"

[node name="Desc2" type="Label" parent="Conditions"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 880.0
margin_top = 410.0
margin_right = 1034.0
margin_bottom = 561.0
grow_horizontal = 2
rect_scale = Vector2( 0.426297, 0.396473 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
align = 2
valign = 1
autowrap = true

[node name="turns_btn2" type="TextureButton" parent="Conditions"]
margin_left = 949.591
margin_top = 408.867
margin_right = 989.591
margin_bottom = 448.867
rect_scale = Vector2( 1.11237, 1.40025 )

[node name="desc_btn2" type="TextureButton" parent="Conditions"]
margin_left = 698.066
margin_top = 406.651
margin_right = 738.066
margin_bottom = 446.651
rect_scale = Vector2( 6.24, 1.33456 )

[node name="Turns3" type="Label" parent="Conditions"]
margin_left = 955.0
margin_top = 470.0
margin_right = 1109.0
margin_bottom = 621.0
rect_scale = Vector2( 0.426297, 0.396473 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
text = "0"

[node name="Desc3" type="Label" parent="Conditions"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 880.0
margin_top = 470.0
margin_right = 1034.0
margin_bottom = 621.0
grow_horizontal = 2
rect_scale = Vector2( 0.426297, 0.396473 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
align = 2
valign = 1
autowrap = true

[node name="turns_btn3" type="TextureButton" parent="Conditions"]
margin_left = 950.699
margin_top = 467.593
margin_right = 990.699
margin_bottom = 507.593
rect_scale = Vector2( 1.11237, 1.40025 )

[node name="desc_btn3" type="TextureButton" parent="Conditions"]
margin_left = 696.957
margin_top = 469.809
margin_right = 736.957
margin_bottom = 509.809
rect_scale = Vector2( 6.22564, 1.2745 )

[node name="InputPopup" type="PopupMenu" parent="."]
editor/display_folded = true
modulate = Color( 1, 1, 1, 0.901961 )
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 20 )

[node name="CenterContainer" type="CenterContainer" parent="InputPopup"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="LineEdit" type="LineEdit" parent="InputPopup/CenterContainer"]
margin_left = 429.0
margin_top = 275.0
margin_right = 595.0
margin_bottom = 325.0
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
align = 1
expand_to_text_length = true
context_menu_enabled = false
placeholder_text = "Enter value"

[connection signal="pressed" from="AC/TextureButton" to="AC" method="_on_TextureButton_pressed"]
[connection signal="pressed" from="HP/TextureProgress/max_hp_button" to="HP" method="_on_max_hp_button_pressed"]
[connection signal="pressed" from="HP/Scar/scar_button" to="HP" method="_on_scar_button_pressed"]
[connection signal="pressed" from="HP/bandaid/bandaid_button" to="HP" method="_on_bandaid_button_pressed"]
[connection signal="pressed" from="INIT/TextureButton" to="INIT" method="_on_TextureButton_pressed"]
[connection signal="pressed" from="PER/TextureButton" to="PER" method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Weapon/weapon_button" to="Weapon" method="_on_weapon_button_pressed"]
[connection signal="pressed" from="Weapon/attack_button" to="Weapon" method="_on_attack_button_pressed"]
[connection signal="pressed" from="Weapon/damage_button" to="Weapon" method="_on_damage_button_pressed"]
[connection signal="pressed" from="Ammo/TextureButton" to="Ammo" method="_on_TextureButton_pressed"]
[connection signal="new_turn" from="Turns" to="Conditions" method="_on_Turns_new_turn"]
[connection signal="button_down" from="Turns/TextureButton" to="Turns" method="_on_TextureButton_button_down"]
[connection signal="button_up" from="Turns/TextureButton" to="Turns" method="_on_TextureButton_button_up"]
[connection signal="button_down" from="Conditions/turns_btn1" to="Conditions" method="_on_turns_btn1_button_down"]
[connection signal="button_up" from="Conditions/turns_btn1" to="Conditions" method="_on_turns_btn1_button_up"]
[connection signal="pressed" from="Conditions/desc_btn1" to="Conditions" method="_on_desc_btn1_pressed"]
[connection signal="button_down" from="Conditions/turns_btn2" to="Conditions" method="_on_turns_btn2_button_down"]
[connection signal="button_up" from="Conditions/turns_btn2" to="Conditions" method="_on_turns_btn2_button_up"]
[connection signal="pressed" from="Conditions/desc_btn2" to="Conditions" method="_on_desc_btn2_pressed"]
[connection signal="button_down" from="Conditions/turns_btn3" to="Conditions" method="_on_turns_btn3_button_down"]
[connection signal="button_up" from="Conditions/turns_btn3" to="Conditions" method="_on_turns_btn3_button_up"]
[connection signal="pressed" from="Conditions/desc_btn3" to="Conditions" method="_on_desc_btn3_pressed"]
[connection signal="focus_exited" from="InputPopup/CenterContainer/LineEdit" to="InputPopup" method="_on_LineEdit_focus_exited"]
[connection signal="text_entered" from="InputPopup/CenterContainer/LineEdit" to="InputPopup" method="_on_LineEdit_text_entered"]
